Add GitHub Actions CI and Dependabot